# Diplom

./: Create Docker image from .vdi .iso and croot.md  README.md
Dockerfile with graphical environment/: README.md
Dockerfile with graphical environment/project_qt_1/: Dockerfile
GitLab/: README.md  config.toml  docker-compose.yml  docker-gitlab-runner.sh  docker-gitlab.sh  gitlab.rb
GitLab/test-gtest-main/: README.md
GitLab/test-gtest-main/test-gtest-main/: Dockerfile
GitLab/test-main/: README.md
GitLab/test-main/program/: CMakeLists.txt
GitLab/test-main/test-main/: ufix_sum.txt
GitLab/test-main/test-main/program/: main.cpp
project_qt_1/: CMakeLists.txt
project_qt_2/: Dockerfile  main.cpp
project_qt_3/: Dockerfile
scripts for docker/: Dockerfile_copy-file  Dockerfile_create  README.md  docker-create-image-and-container-both.sh  docker-install-astra.sh  docker-install-ubuntu-22.04.sh  docker-open-container.sh
scripts for docker/scripts/: docker-container-to-image.sh  docker-delete-container-image.sh  docker-install-debian-10.sh  docker-install-ubuntu-20.sh  docker-install.sh  docker-push.sh  info-account.sh  test_is-equal-docker-images.sh
web/: Dockerfile  requirements.txt
web/hub/: __init__.py  main.py  models.py
web/server/: __init__.py  auth.py  hub.py  main.py  models.py
web/server/static/: script.js  style.css  style_signin.css  style_signup.css
web/server/templates/: base.html  data_iframe.html  device.html  index.html  login.html  signup.html  station.html
